--- a/DepartmentService.properties
+++ b/DepartmentService.properties
@@ -4,5 +4,5 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hiberante.dialect.MySQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
+spring.boot.message=Hello , Department Service
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
